agrego captura de coordenadas en la vista